# s3peek

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.codex/skills/caveman/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.omc/: backlog.md  project-memory.json
.omc/plans/: open-questions.md  s3-browse-and-lazy-hydration.md
.omc/sessions/: 0f4e0775-5a6a-41c7-aaef-8fcb81fccc6e.json  3d9ac228-8167-4cfa-82a8-6d5623816285.json  43626393-b2ff-42f0-acc6-cf3c17aeb0d6.json  5458ed00-b1d1-4c24-98a1-aa6a6f00ba03.json  657920aa-01de-43ae-8a58-81f93ac7d9f9.json  8473231b-08eb-4145-898f-0d6f19b6ede0.json  9a34823a-ce82-4dc4-81b1-0eb5c1590338.json  e322cca6-5501-4a19-8bf1-ac5c73f79702.json
.omc/state/: mission-state.json
.omc/state/checkpoints/: checkpoint-2026-05-05T00-56-09-971Z.json
.omc/state/sessions/0f4e0775-5a6a-41c7-aaef-8fcb81fccc6e/: hud-state.json
.omc/state/sessions/3d9ac228-8167-4cfa-82a8-6d5623816285/: hud-state.json
.omc/state/sessions/5458ed00-b1d1-4c24-98a1-aa6a6f00ba03/: hud-state.json
.omc/state/sessions/657920aa-01de-43ae-8a58-81f93ac7d9f9/: hud-state.json
.omc/state/sessions/8473231b-08eb-4145-898f-0d6f19b6ede0/: hud-state.json
fixtures/: sample.json
src/s3peek/: browser.py  cli.py  config.py  exceptions.py  firefly.py  plugins.py  presign.py  quicklook.py  s3.py
src/s3peek/readers/: __init__.py  asdf.py  fits.py  json.py  parquet.py
src/s3peek/themes/: __init__.py  dark.py  light.py
tests/: conftest.py  test_cli.py  test_firefly.py  test_plugins.py  test_presign.py  test_quicklook.py  test_s3.py
(+2 files in other folders)
